# urlsplit

./: Cargo.toml  README.md
src/: delimiter.rs  main.rs  split.rs
tests/: in.csv  out.csv  test_urlsplit.rs
