[package]
name = "urlsplit"
version = "0.2.0"
authors = ["Alex Rudy <opensource@alexrudy.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
csv = "1.1.6"
lazy_static = "1.4.0"
tldextract = "0.5.1"
docopt = "1.1.1"
serde_derive = "1.0.140"
serde = "1.0.140"
